# auto-orient

./: .gitignore  README.md  pyproject.toml
src/auto_orient/: __init__.py  cli.py  report.py  rotation.py  scanner.py
src/auto_orient/detectors/: __init__.py  oad.py  pipeline.py
